--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <link type="text/css" rel="stylesheet" href="https://siat.sat.gob.mx/app/qr/faces/javax.faces.resource/primefaces.css;jsessionid=_dDZVRNJMao_C8dyeIDij5s5DtxBLs9eJE5DEwyLPns3-0A28cdG!1396796085?ln=primefaces" />
 
 </head><body>
-        <link href="prueba.css" rel="stylesheet" type="text/css" />
-        <link href="validacionCIF.css" rel="stylesheet" type="text/css" />
+        <link href="../prueba.css" rel="stylesheet" type="text/css" />
+        <link href="../validacionCIF.css" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css" />
         <center><img id="j_idt4" src="https://siat.sat.gob.mx/app/qr/images/HACIENDA-SAT.jpg;jsessionid=_dDZVRNJMao_C8dyeIDij5s5DtxBLs9eJE5DEwyLPns3-0A28cdG!1396796085" alt="" width="320px" />
         </center>
